thirdparty/boost/libs/uuid/test/compile-fail/.uuid
6b2e75c0-6bc5-4a9f-bbc1-2d39b3780227